--- a/arch/arm/configs/htcleo_defconfig
+++ b/arch/arm/configs/htcleo_defconfig
@@ -163,12 +163,12 @@ CONFIG_CGROUP_BFQIO=y
 CONFIG_IOSCHED_SIO=y
 CONFIG_IOSCHED_VR=y
 # CONFIG_DEFAULT_DEADLINE is not set
-# CONFIG_DEFAULT_CFQ is not set
-CONFIG_DEFAULT_BFQ=y
+CONFIG_DEFAULT_CFQ=y
+# CONFIG_DEFAULT_BFQ is not set
 # CONFIG_DEFAULT_SIO is not set
 # CONFIG_DEFAULT_NOOP is not set
 # CONFIG_DEFAULT_VR is not set
-CONFIG_DEFAULT_IOSCHED="bfq"
+CONFIG_DEFAULT_IOSCHED="cfq"
 # CONFIG_INLINE_SPIN_TRYLOCK is not set
 # CONFIG_INLINE_SPIN_TRYLOCK_BH is not set
 # CONFIG_INLINE_SPIN_LOCK is not set
@@ -550,24 +550,23 @@ CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMAND=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_SUPERBAD is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_LAGFREE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_SMARTASS2 is not set
-CONFIG_CPU_FREQ_GOV_SAVAGEDZEN=y
+# CONFIG_CPU_FREQ_GOV_SAVAGEDZEN is not set
 CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
-CONFIG_CPU_FREQ_GOV_VIRTUOUS=y
-CONFIG_CPU_FREQ_GOV_SMOOTHASS=y
-CONFIG_CPU_FREQ_GOV_SMARTASS=y
+# CONFIG_CPU_FREQ_GOV_VIRTUOUS is not set
+# CONFIG_CPU_FREQ_GOV_SMOOTHASS is not set
+# CONFIG_CPU_FREQ_GOV_SMARTASS is not set
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 CONFIG_CPU_FREQ_GOV_USERSPACE=y
-CONFIG_CPU_FREQ_GOV_LAZY=y
-CONFIG_CPU_FREQ_GOV_ONDEMANDX=y
-CONFIG_CPU_FREQ_GOV_ONDEMANDX_INPUT=y
+# CONFIG_CPU_FREQ_GOV_LAZY is not set
+# CONFIG_CPU_FREQ_GOV_ONDEMANDX is not set
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
 CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
-CONFIG_CPU_FREQ_GOV_INTERACTIVEX=y
+# CONFIG_CPU_FREQ_GOV_INTERACTIVEX is not set
 CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
-CONFIG_CPU_FREQ_GOV_SMARTASS2=y
-CONFIG_CPU_FREQ_GOV_SUPERBAD=y
-CONFIG_CPU_FREQ_GOV_SCARY=y
-CONFIG_CPU_FREQ_GOV_LAGFREE=y
+# CONFIG_CPU_FREQ_GOV_SMARTASS2 is not set
+# CONFIG_CPU_FREQ_GOV_SUPERBAD is not set
+# CONFIG_CPU_FREQ_GOV_SCARY is not set
+# CONFIG_CPU_FREQ_GOV_LAGFREE is not set
 CONFIG_CPU_FREQ_MIN_TICKS=10
 CONFIG_CPU_FREQ_SAMPLING_LATENCY_MULTIPLIER=1000
 CONFIG_CPU_FREQ_VDD_LEVELS=y
