config: include most modules in kernelspace also fix wifi firmware path

--- a/arch/arm/configs/htcleo_defconfig
+++ b/arch/arm/configs/htcleo_defconfig
@@ -1168,7 +1168,7 @@ CONFIG_DUMMY=y
 # CONFIG_BONDING is not set
 # CONFIG_MACVLAN is not set
 # CONFIG_EQUALIZER is not set
-CONFIG_TUN=m
+CONFIG_TUN=y
 # CONFIG_VETH is not set
 # CONFIG_PHYLIB is not set
 CONFIG_NET_ETHERNET=y
@@ -1199,8 +1199,8 @@ CONFIG_WLAN=y
 # CONFIG_HOSTAP is not set
 # CONFIG_IWM is not set
 # CONFIG_LIBERTAS is not set
-CONFIG_BCM4329=m
-CONFIG_BCM4329_FW_PATH="/system/etc/firmware/fw_bcm4329.bin"
+CONFIG_BCM4329=y
+CONFIG_BCM4329_FW_PATH="/vendor/firmware/fw_bcm4329.bin"
 CONFIG_BCM4329_NVRAM_PATH="/proc/calibration"
 # CONFIG_BCM4329_248 is not set
 # CONFIG_BCM4329_CES is not set
@@ -1229,7 +1229,7 @@ CONFIG_MSM_RMNET=m
 # CONFIG_MSM_RMNET_DEBUG is not set
 # CONFIG_NETPOLL is not set
 # CONFIG_NET_POLL_CONTROLLER is not set
-CONFIG_KINETO_GAN=m
+CONFIG_KINETO_GAN=y
 # CONFIG_ISDN is not set
 # CONFIG_PHONE is not set
 
@@ -1686,7 +1686,7 @@ CONFIG_SND_VERBOSE_PROCFS=y
 # CONFIG_SND_DRIVERS is not set
 # CONFIG_SND_ARM is not set
 # CONFIG_SND_SPI is not set
-CONFIG_SND_HTCLEO=m
+CONFIG_SND_HTCLEO=y
 # CONFIG_SND_SOC is not set
 # CONFIG_SOUND_PRIME is not set
 CONFIG_HID_SUPPORT=y
@@ -1941,7 +1941,7 @@ CONFIG_ANDROID_LOW_MEMORY_KILLER=y
 #
 # CONFIG_IIO is not set
 CONFIG_XVMALLOC=y
-CONFIG_ZRAM=m
+CONFIG_ZRAM=y
 # CONFIG_ZRAM_DEBUG is not set
 # CONFIG_ZCACHE is not set
 CONFIG_QCACHE=y
@@ -2090,7 +2090,7 @@ CONFIG_RPCSEC_GSS_KRB5=y
 # CONFIG_RPCSEC_GSS_SPKM3 is not set
 # CONFIG_SMB_FS is not set
 # CONFIG_CEPH_FS is not set
-CONFIG_CIFS=m
+CONFIG_CIFS=y
 # CONFIG_CIFS_STATS is not set
 # CONFIG_CIFS_WEAK_PW_HASH is not set
 # CONFIG_CIFS_XATTR is not set
