don't build alsa stuff  * causes lockups on boot

--- a/arch/arm/configs/htcleo_defconfig
+++ b/arch/arm/configs/htcleo_defconfig
@@ -1686,7 +1686,7 @@ CONFIG_SND_VERBOSE_PROCFS=y
 # CONFIG_SND_DRIVERS is not set
 # CONFIG_SND_ARM is not set
 # CONFIG_SND_SPI is not set
-CONFIG_SND_HTCLEO=y
+# CONFIG_SND_HTCLEO is not set
 # CONFIG_SND_SOC is not set
 # CONFIG_SOUND_PRIME is not set
 CONFIG_HID_SUPPORT=y
